--- a/HELP/Base.lproj/Main.storyboard
+++ b/HELP/Base.lproj/Main.storyboard
@@ -107,10 +107,10 @@
             </objects>
             <point key="canvasLocation" x="906" y="452"/>
         </scene>
-        <!--View Controller-->
+        <!--First Aid Page View Controller-->
         <scene sceneID="eUh-WS-amP">
             <objects>
-                <viewController id="mUI-fb-6L8" sceneMemberID="viewController">
+                <viewController id="mUI-fb-6L8" customClass="HLPFirstAidPageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="WTy-lv-dpL"/>
                         <viewControllerLayoutGuide type="bottom" id="fre-lC-aCH"/>
@@ -123,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Do7-Ec-bS8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1405" y="440"/>
+            <point key="canvasLocation" x="1375" y="144"/>
         </scene>
         <!--First Screen View Controller - FirstScreenController-->
         <scene sceneID="ufC-wZ-h7g">
@@ -276,6 +276,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d6f-hi-ozn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="906" y="1189"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fCs-T0-hHM">
+            <objects>
+                <viewController id="zw8-d9-cPd" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TsG-uc-O8g"/>
+                        <viewControllerLayoutGuide type="bottom" id="cBQ-eZ-f8q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1U3-or-xL1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qWu-Kb-ilf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1378" y="825"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3Cl-5H-lhm">
